--- a/nuestras_instalaciones.html
+++ b/nuestras_instalaciones.html
@@ -200,74 +200,133 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>-->
-                <div class="temp-instalaciones">
+                <div id="galeria" class="temp-instalaciones">
 
                     <div class="col-sm-11 fila">
                         <div class="row">
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion1.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion1.jpg" alt="">
+                                </div>
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion2.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion2.jpg" alt="">
+                                </div>
+
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion3.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion3.jpg" alt="">
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
 
                     <div class="col-sm-11 fila">
                         <div class="row">
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion4.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion4.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion5.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion5.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion6.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion6.jpg" alt="">
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
 
                     <div class="col-sm-11 fila">
                         <div class="row">
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion7.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion7.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion8.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion8.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion9.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion9.jpg" alt="">
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
 
                     <div class="col-sm-11 fila">
                         <div class="row">
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion10.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion10.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion11.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion11.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion12.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion12.jpg" alt="">
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
 
                     <div class="col-sm-11 fila">
                         <div class="row">
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion13.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion13.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion14.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion14.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion15.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion15.jpg" alt="">
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -275,28 +334,55 @@
 
                     <div class="col-sm-11 fila">
                         <div class="row">
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion16.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion16.jpg" alt="">
+
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion17.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion17.jpg" alt="">
+
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion18.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img  ">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion18.jpg" alt="">
+
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
 
                     <div class="col-sm-11 fila">
                         <div class="row">
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion19.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion19.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion20.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion20.jpg" alt="">
+
+                                </div>
+
                             </div>
-                            <div class="col-sm-4 caja-img zoom">
-                                <img src="images/instalaciones/instalacion21.jpg" width="100%" alt="">
+                            <div class="col-sm-4 caja-img">
+                                <div class="fondo">
+                                    <img class="imagen-lightbox" src="images/instalaciones/instalacion21.jpg" alt="">
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -421,20 +507,47 @@
     </div>
 
     <!--Botón Arriba-->
-    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png">
-        <script src="js/simplescrollup.js"></script>
+    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png"></a>
 
-        <script src="js/jquery-3.2.1.min.js"></script>
-        <script src="styles/bootstrap4/popper.js"></script>
-        <script src="styles/bootstrap4/bootstrap.min.js"></script>
-        <script src="plugins/greensock/TweenMax.min.js"></script>
-        <script src="plugins/greensock/TimelineMax.min.js"></script>
-        <script src="plugins/scrollmagic/ScrollMagic.min.js"></script>
-        <script src="plugins/greensock/animation.gsap.min.js"></script>
-        <script src="plugins/greensock/ScrollToPlugin.min.js"></script>
-        <script src="plugins/scrollTo/jquery.scrollTo.min.js"></script>
-        <script src="plugins/easing/easing.js"></script>
-        <script src="js/courses_custom.js"></script>
+
+    <div id="lightbox">
+
+        <div class="contenido-lightbox">
+
+
+            <div id="flecha-izquierda" class="flecha-light">
+                <i class="fas fa-angle-left"></i>
+            </div>
+            <div id="content">
+                <img class="imagen-mostrada" src="#" />
+                <div id="boton-cerrar">
+                    <i class="fas fa-times"></i>
+                </div>
+            </div>
+
+
+            <div id="flecha-derecha" class="flecha-light">
+                <i class="fas fa-angle-right"></i>
+            </div>
+
+
+        </div>
+    </div>
+
+
+    <script src="js/simplescrollup.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="styles/bootstrap4/popper.js"></script>
+    <script src="styles/bootstrap4/bootstrap.min.js"></script>
+    <script src="plugins/greensock/TweenMax.min.js"></script>
+    <script src="plugins/greensock/TimelineMax.min.js"></script>
+    <script src="plugins/scrollmagic/ScrollMagic.min.js"></script>
+    <script src="plugins/greensock/animation.gsap.min.js"></script>
+    <script src="plugins/greensock/ScrollToPlugin.min.js"></script>
+    <script src="plugins/scrollTo/jquery.scrollTo.min.js"></script>
+    <script src="plugins/easing/easing.js"></script>
+    <script src="js/courses_custom.js"></script>
+    <script src="js/Efecto_lightbox.js"></script>
 
 </body>
 
